--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -105,11 +105,21 @@ button {
     background: url(../images/check.png);
 }
 
-.task span {
+.task span, .task input {
     line-height: 35px;
     height: 35px;
     padding: 5px;
     color: black;
+    display: block;
+}
+
+.task input {
+    width: 100%;    
+    outline: none;
+    background: -webkit-linear-gradient(#EDEDE9, #EFEFE9);
+    padding: 0 5px;
+    font-size: 16px
+
 }
 
 .task .completed {
